[package]
name = "gitstar"
version = "0.1.0"
authors = ["周建刚 <zhoujg@weipaitang.com>"]

[dependencies]
log = "0.3.8"
env_logger = "0.4.3"
reqwest = "0.8.1"
serde_json = "1.0.6"

scron = "0.1.2"
chrono = "0.4.0"

diesel = { version = "0.99.0", features = ["postgres"] }
diesel_infer_schema = { version = "0.99.0", features = ["postgres"] }
dotenv = "0.9.0"