[package]
name = "gitstar"
version = "0.1.0"
authors = ["gladmo <mo@gladmo.com>"]

[dependencies]
# log = "0.3.8"
# env_logger = "0.4.3"
reqwest = "~0.8.1"
serde_json = "1.0.6"

log = "0.4.0-rc.1"
env_logger = "0.5.0-rc.1"

url = "1.6.0"
regex = "0.2.3"
rand = "0.4"

scron = "~0.1.3"
chrono = "0.4.0"

diesel = { version = "1.1.1", features = ["postgres"] }
dotenv = "0.9.0"